src/test/parse-fail/pat-lt-bracket-5.rs
fn main() {
    let v[0] = v[1]; //~ ERROR expected one of `:`, `;`, `=`, or `@`, found `[`
}
